# qeds-rs

./: .gitignore  Cargo.toml
src/: constrained_triangulation.rs  lib.rs  main.rs  point.rs  qeds.rs  surface_triangulation.rs  triangulation.rs
src/surface_triangulation/: mod.rs  stable.rs
