[package]
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"
name = "qeds"
version = "0.3.0"

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
prettytable-rs = {version="0.8", optional = true}
rand = "0.8"
robust = "0.2"
serde = {version = "1", features = ["derive"], optional = true}
slab = {version = "0.4"}

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
serialize = ["slab/serde","serde","prettytable-rs"]
