[package]
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"
name = "qeds"
version = "0.3.0"

[dependencies]
slab = {version = "0.4"}
robust = "0.2"

# used for randon locating
rand = "0.8"
getrandom = {version = "0.2", features = ["js"]}

# serialize
prettytable-rs = {version="0.8", optional = true}
serde = {version = "1", features = ["derive"], optional = true}

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
serialize = ["slab/serde","serde","prettytable-rs"]
