[package]
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"
name = "qeds"
version = "0.3.1"

[dependencies]
slab = { version = "0.4" }
robust = "1"

# used for randon locating
rand = "0.9"
getrandom = { version = "0.3" }

# serialize
prettytable-rs = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
serialize = ["slab/serde", "serde", "prettytable-rs"]
